--- a/site/work.html
+++ b/site/work.html
@@ -665,7 +665,6 @@
 
 
 <h1 id="work-with-me">Work With Me</h1>
-<p>I'm currently at full capacity till February 2025 and won't be able to take on any long term projects till then.</p>
 <p>I'd love to have a chat if you're</p>
 <ul>
 <li>A startup struggling to figure out how to build more reliable evaluations for your LLM application</li>
@@ -674,6 +673,7 @@
 </ul>
 <p>Here's a <a href="https://cal.com/sandipanhaldar/30min">cal.com link</a> to book some time if this sounds like something you're interested with.</p>
 <p>In exchange, I might write about some of the issues and problems we talk about - without giving specific details. If I do use content we discussed about, I'll clear it with you before publishing anything.</p>
+<p>Reach me out at &lt;&gt;</p>
 
 
 
