--- a/site/work.html
+++ b/site/work.html
@@ -682,7 +682,9 @@
 </ul>
 <p>Here's a <a href="https://cal.com/sandipanhaldar/30min">cal.com link</a> to book some time if this sounds like something you're interested with.</p>
 <p>In exchange, I might write about some of the issues and problems we talk about - without giving specific details. If I do use content we discussed about, I'll clear it with you before publishing anything.</p>
-<p>Reach me out at &lt;&gt;</p>
+<p>Reach out to me !</p>
+<div style="width:100%;height:500px;" data-fillout-id="nkzocK6rkYus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize></div>
+<script src="https://server.fillout.com/embed/v1/"></script>
 
 
 
