add book a call

--- a/site/index.html
+++ b/site/index.html
@@ -741,7 +741,10 @@
 <p>I worked at <a href="https://www.hrs.com/">HRS</a> for three years, leading AI workflows, data infrastructure, and pipeline automation to optimize business operations. Before that, I worked as a Data Scientist at various startups, helping organizations use AI to improve decision-making and operational efficiency.</p>
 <p>Let’s Talk AI Strategy</p>
 <p>I work with business leaders, product teams, and AI practitioners to deploy practical AI solutions that drive measurable impact. If you’re looking to integrate AI into your operations, optimize existing AI systems, or explore new AI-driven opportunities,let’s talk.</p>
-<p><a class="md-button md-button--primary" href="mailto:work@sandipanhaldar.com">Contact Me</a></p>
+<div style="display: flex; gap: 20px;">
+  <a href="mailto:work@sandipanhaldar.com" style="background-color: #3949ab; color: white; padding: 16px 32px; text-decoration: none; border-radius: 4px; font-weight: 500;">Contact Me</a>
+  <a href="https://cal.com/sandipanhaldar/30min" style="background-color: #3949ab; color: white; padding: 16px 32px; text-decoration: none; border-radius: 4px; font-weight: 500;">Book a Call</a>
+</div>
 
 
 
